@@ -12,6 +12,7 @@ Changes in version 0.6 (2004-xx-xx)
 * Added failed Authentication object to AuthenticationExceptions
 * Added signed JARs to all official release builds (see readme.txt)
 * Added remote client authentication validation package
+* Added protected sendAccessDeniedError method to SecurityEnforcementFilter
 * Updated Authentication to be serializable (Weblogic support)
 * Updated to Clover 1.3
 * Updated to HSQLDB version 1.7.2 Release Candidate 6D
